The problem was that there was no nice way to ensure the order in which these procs were called, which
led to some unexpected situations. In this release you can only register a single World proc. If you
want to extend a world with certain modules, you simply call the #World method with the module(s)
you wish to extend the World with. The Sinatra example illustrates how to do this.

The Visitor API (which is used for formatters) has also changed slightly. However, we have tried to
do this in a backwards compatible way, so if you have custom formatters for Cucumber 0.2 they should
still work.

=== New features
* Added translation for Bulgarian (Krasimir Angelov)
* Updated translation for Polish (#273 Grzegorz Marszałek)
* Only a single World proc can be registered. World extension now happens by calling #World with ruby modules.
* Portuguese uses Funcionalidade in stead of Característica and accented words are aliased with unaccented ones (Alexandre da Silva and Felipe Coury).
* The usage formatter also prints unused step definitions (Aslak Hellesøy)
* Better exception if a World proc returns nil. (Aslak Hellesøy)
* Allow Step Definitions to use |*varargs|, but only on Ruby 1.9. (Aslak Hellesøy)
* Snippets for steps that use Step Tables or PyStrings include block param and object type hint comment (#247 Joseph Wilk)
* Support description string for Backgrounds (#271 Joseph Wilk)

=== Bugfixes
* Fixed Background runs twice (#255 Aslak Hellesøy)
* Fixed Background Transactions and :xx (#270 Aslak Hellesøy)
* Fixed Autospec failing with cucumber 0.2 (#254 Aslak Hellesøy)
* Sibling file detecting not working (#278 Aslak Hellesøy)

=== Removed/changed features
* The visitor API has changed slightly:
** #visit_step_name, #visit_multiline_arg and #visit_exception are no longer official API methods.
** #visit_step_result replaces those 3 methods.
** Table and PyString no longer hold status information. Each visitor subclass should store state in @state if needed.