@@ -18,7 +18,7 @@ module Cucumber
 
       def accept(visitor)
         @features.each do |feature|
-          visitor.visit_feature(feature) if feature.descend?(visitor)
+          visitor.visit_feature(feature)
         end
       end
     end
