@@ -10,21 +10,11 @@ module Cucumber
 
       def accept(visitor)
         cells_rows.each_with_index do |row, n|
-          if n == 0 || matches?(visitor, row)
-            visitor.visit_table_row(row)
-          end
+          visitor.visit_table_row(row)
         end
         nil
       end
 
-      def descend?(visitor)
-        cells_rows.detect{|cells_row| cells_row.descend?(visitor)}
-      end
-      
-      def matches?(visitor, cells)
-        @scenario_outline.matches_tags_and_name?(visitor)
-      end
-      
       def skip_invoke!
         example_rows.each do |cells|
           cells.skip_invoke!
@@ -46,10 +36,6 @@ module Cucumber
           @step_invocations = scenario_outline.step_invocations(self)
         end
         
-        def descend?(visitor)
-          @table.matches?(visitor, self)
-        end
-
         def skip_invoke!
           @step_invocations.each do |step_invocation|
             step_invocation.skip_invoke!
