@@ -11,10 +11,6 @@ module Cucumber
         @line, @tag_names = line, tag_names
       end
 
-      def has_tags?(tags)
-        (@tag_names & tags).any?
-      end
-
       def accept(visitor)
         @tag_names.each do |tag_name|
           visitor.visit_tag_name(tag_name)
